--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <div class="container-fluid gameBox col-xs-4 col-md-6 col-lg-12">
+        <div class="container-fluid gameBox col-xs-4 col-md-6 col-lg-10">
             <div class="row">
                 <div class="col-xs-4 col-md-6 col-lg-8">
                     <!-- Title box -->
@@ -25,7 +25,7 @@
             </div>
 
             <div class="row">
-                <div class="col-xs-4 col-md-6 col-lg-8">
+                <div class="col-xs-4 col-md-6 col-lg-10">
                     <!-- Instructions box -->
                     <div class="instructions">
                         <p class="rules">You will be given a target score at the start of the game.</p>
@@ -59,7 +59,7 @@
 
             <div class="row crystals">
                     <!-- Crystal images box -->
-                    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 img-responsive">
+                    <div class="col-xs-3 col-md-3 col-lg-3 img-responsive">
                         <img src="assets/images/crystal-1.jpg" id="crystalOne" class="img-responsive" alt="Round Gem">
                     </div>    
                     <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
