--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
 
             <div class="row">
-                <div class="col-xs-4 col-md-6 col-lg-10">
+                <div class="col-xs-4 col-md-6 col-lg-8">
                     <!-- Instructions box -->
                     <div class="instructions">
                         <p class="rules">You will be given a target score at the start of the game.</p>
@@ -58,23 +58,23 @@
             </div>
 
             <div class="row crystals">
-                    <!-- Crystal images box -->
+                    <!-- Crystal images -->
                     <div class="col-xs-3 col-md-3 col-lg-3 img-responsive">
                         <img src="assets/images/crystal-1.jpg" id="crystalOne" class="img-responsive" alt="Round Gem">
                     </div>    
-                    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <div class="col-xs-3 col-md-3 col-lg-3">
                         <img src="assets/images/crystal-2.jpg" id="crystalTwo" class="img-responsive" alt="Heart Geode">
                     </div>    
-                    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <div class="col-xs-3 col-md-3 col-lg-3">
                         <img src="assets/images/crystal-3.jpg" id="crystalThree" class="img-responsive" alt="Heart Stone">
                     </div>    
-                    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <div class="col-xs-3 col-md-3 col-lg-3">
                         <img src="assets/images/crystal-4.jpg" id="crystalFour" class="img-responsive" alt="Diamond">
                     </div>    
             </div>
 
             <div class="row">
-                <div class="col-xs-4 col-md-6 col-lg-8 ">
+                <div class="col-xs-6 col-md-6 col-lg-8 ">
                     <!-- Total Score box -->
                     <div class="totalScore">
                         <p>Your total score is:</p>
